Fixed #1987 - Quick create arrow not aligning to the button text

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -8743,16 +8743,16 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     #quickcreatetop {
-        margin-top: 25px;
+        margin: 25px;
     }
 
     #quickcreatetop a {
         padding: 13px 32px 13px 12px;
-        background-position: 80px 2px;
+        background-position: 90% 100%;
     }
 
     #quickcreatetop a:hover {
-        background-position: 80px -56px;
+        background-position: 90% 100%;
     }
 
     #quickcreatetop ul.dropdown-menu {
